<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TableActivity">

    <TableLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/Layout4Table" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:stretchColumns="0,1" app:layout_constraintBottom_toTopOf="@id/Button4Back_Table">

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <Button
                    android:text="@string/this_table_activity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/Button2This"/>
            <Button
                    android:text="@string/is_table_activity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/Button2Is"/>
        </TableRow>
        <Button
                android:text="@string/a_table_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/Button2A"/>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <Button
                    android:text="@string/button_table_activityt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/Button2Button"/>
        </TableRow>
    </TableLayout>
    <Button
            android:text="@string/back_linear_layout"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:id="@+id/Button4Back_Table" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>