<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_slogan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.024" android:id="@+id/WelcomeWord" android:textSize="24sp"
            app:layout_constraintHorizontal_bias="0.496"/>
    <Button
            android:text="@string/button_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Button2Linear" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/WelcomeWord"
            android:layout_marginTop="35dp"/>
    <Button
            android:text="@string/button_relative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Button2Relative" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/Button2Linear"
            android:layout_marginTop="35dp"/>
    <Button
            android:text="@string/button_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Button2Frame"
            app:layout_constraintTop_toBottomOf="@+id/Button2Relative" android:layout_marginTop="35dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/button_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Button2Table" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="35dp"
            app:layout_constraintTop_toBottomOf="@+id/Button2Frame"/>
    <Button
            android:text="@string/button_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Button2Grid" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/Button2Table"
            android:layout_marginTop="35dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>