<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RelativeActivity">

    <RelativeLayout
            android:layout_width="414dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/Button4Back_Relative"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/Layout4Relative">

        <Button
                android:text="@string/hello_relative_layout"
                android:layout_centerInParent="true"
                android:layout_width="100dp"
                android:layout_height="100dp" android:id="@+id/Button4Hello"/>
        <Button
                android:text="@string/world_relative_layout"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/Button4World"
                android:layout_toStartOf="@id/Button4Hello" android:layout_toLeftOf="@id/Button4Hello"/>
        <Button
                android:text="@string/china_relative_layout"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/Button4China"
                android:layout_toEndOf="@+id/Button4Hello" android:layout_toRightOf="@+id/Button4Hello"/>
        <Button
                android:text="@string/android_relative_layout"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/Button4Android"
                android:layout_below="@id/Button4Hello"/>
    </RelativeLayout>
    <Button
            android:text="@string/back_linear_layout"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:id="@+id/Button4Back_Relative"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>