<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        tools:context=".LinearActivity">

    <LinearLayout
            android:id="@+id/Layout4Linear"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent" android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/Button4Back">
        <Button
                android:text="@string/horizontal_linear_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/Button2Horizontal" android:layout_weight="1"/>
        <Button
                android:text="@string/vertical_linear_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/Button2Vertical" android:layout_weight="1"/>
        <Button
                android:text="@string/left_linear_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/Button2AlignLeft" android:layout_weight="1"/>
    </LinearLayout>
    <Button
            android:text="@string/back_linear_layout"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:id="@+id/Button4Back" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>